--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -14,4 +14,6 @@ dependencies {
     def koin_version = "3.3.2"
     implementation "io.insert-koin:koin-core:$koin_version"
     implementation "io.insert-koin:koin-android:$koin_version"
+
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
