--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- permission to run task ./gradlew lint -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-sdk tools:overrideLibrary="androidx.security"/>
 
     <application
         android:name=".VeeMoov"
@@ -18,18 +19,17 @@
         android:theme="@style/Theme.VeeMoov"
         tools:targetApi="31">
         <activity
-            android:name=".detail.DetailActivity"
-            android:exported="false"
-            android:theme="@style/NoActionBarLightStatusTranslucent" />
-        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".detail.DetailActivity"
+            android:exported="false"
+            android:theme="@style/NoActionBarLightStatusTranslucent" />
     </application>
 
 </manifest>
