--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -23,4 +23,7 @@ dependencies {
 
     implementation "androidx.security:security-crypto:1.1.0-alpha02"
     implementation 'com.scottyab:secure-preferences-lib:0.1.7'
+
+    implementation "net.zetetic:android-database-sqlcipher:4.5.3"
+    implementation "androidx.sqlite:sqlite:2.1.0"
 }
